# alchemiser-quant

./: .coveragerc  .dockerignore  .env.almgren_chriss.example  .env.example  .gitignore  .pre-commit-config.md  .pre-commit-config.yaml  .samignore  .secrets.baseline  2026-01-11T11-46_export.csv  ALPACA_ARCHITECTURE_REFACTOR_PLAN.md  ALPACA_CONSOLIDATION_PROGRESS.md  ALPACA_DECOMPOSITION.md  ALPACA_INTEGRATION_CONSOLIDATION_PLAN.md  ALPACA_MIGRATION_GUIDE.md  ANN401_FIX_PLAN.md  ARCHITECTURE_COMPLETION_GUIDE.md  ARCHITECTURE_REVIEW.md  AUDIT_ACCEPTANCE_CRITERIA_SUMMARY.md  AUDIT_COMPLETION_SUMMARY.md  AUDIT_COMPLETION_strategy_value_objects.md  AUDIT_SUMMARY_exceptions.md  AUDIT_SUMMARY_value_objects_init.md  AUDIT_exceptions_py.md  All_LSE.csv  All_LSE.numbers  BACKTEST_README.md  BATCH_10_MIGRATION_REPORT.md  BATCH_11_MIGRATION_REPORT.md  BATCH_12_MIGRATION_PLAN.md  BATCH_12_MIGRATION_REPORT.md  BATCH_13_MIGRATION_PLAN.md  BATCH_13_MIGRATION_REPORT.md  BATCH_15_MIGRATION_REPORT.md  BATCH_16_MIGRATION_REPORT.md  BATCH_17_MIGRATION_PLAN.md  BATCH_17_MIGRATION_REPORT.md  BATCH_1_MIGRATION_REPORT.md  BATCH_2_MIGRATION_REPORT.md  BATCH_3_MIGRATION_REPORT.md  (+389 more)
.aws-sam/: build.toml
.github/: copilot-instructions.md  dependabot.yml
analysis/: architecture_audit.json  architecture_audit.md
analysis_reports/: COMBINED_SIGNAL_GUIDE.md  HYBRID_STRATEGY_ANALYSIS.md  LADDERING_ANALYSIS_SUMMARY.md  SIGNAL_NOISE_ANALYSIS.md  VARIABLE_ALLOCATION_ANALYSIS.md  strategy_optimization_results_20250625_194908.md  strategy_optimization_results_20250625_201057.md  tqqq_macd_backtest_results.csv
anti_corruption/: __init__.py
archive/: MACD_12_26_9_detailed_results.csv  all_backtest_results_20250625_201057.csv  analyze_best_strategies.py  analyze_results.py  asymmetric_laddering_results.csv  backtest_results.csv  binary_exit_strategy_results.csv  buy_only_laddering_results.csv  check_data_history.py  combined_signal_dashboard.py  comprehensive_strategy_comparison.py  comprehensive_strategy_metrics.csv  create_comparison_visualization.py  create_visualization.py  final_strategy_dashboard.py  final_variable_allocation_strategy.py  hybrid_strategies_comparison.csv  hybrid_strategy_tester.py  laddering_analysis.py  macd_vs_sma_comparison.py  macd_vs_sma_macd_results.csv  macd_vs_sma_sma_results.csv  optimal_laddering_analysis.py  optimized_hybrid_strategy.py  optimized_macd_strategy_results.csv  optimized_strategy.py  or_logic_detailed_results.csv  or_logic_hybrid_strategy_results.csv  original_sma_detailed_results.csv  pure_binary_strategy_results.csv  quick_signal_check.py  risk_adjusted_analysis.py  run_backtest.py  signal_combination_analysis.py  signal_combination_detailed_analysis.csv  sma_variation_grid_search.py  sma_variation_grid_search_results.csv  symmetric_laddering_results.csv  trading_strategy_backtest.py  ultimate_comparison.py  (+6 more)
artifacts/: coverage_gaps.md
bots/: telegram_bot.py
clj-strategies/: KLM.clj
composer.trade scripts/: Manhattan.clj  TQQQ.clj  complete_cheat.clj  holy_grail_simplified.clj
configs/: backtest.example.yaml
core/: __init__.py  alert_service.py  config.py  data_provider.py  email_utils.py  indicators.py  logging_utils.py  nuclear_trading_bot.py  post_trade_validator.py  s3_utils.py  secrets_manager.py  strategy_engine.py  strategy_manager.py  strategy_order_tracker.py  tecl_strategy_engine.py  tecl_trading_bot.py  telegram_utils.py
dashboard/: _setup_imports.py  app.py  requirements.txt  settings.py
dependencies/: requirements.txt
dependencies-report/: requirements.txt
desktop_app/: README.md  automator_run.sh  automator_run_silent.sh  config.json  execution_timing_backtest.py  execution_timing_close_execution_4:30pm_uk.csv  execution_timing_comparison.csv  execution_timing_intraday_execution_midpoint.csv  execution_timing_open_execution_8am_uk.csv  launch.py  lqq3_email_monitor.py  lqq3_signal_app.py  qqq_vs_tqqq_sma_signal_comparison.py  requirements.txt  run_daily_check.sh  run_email_monitor.sh  setup_automation.py  signal_state.json
docs/: ALMGREN_CHRISS_EXECUTION.md  ALMGREN_CHRISS_MIGRATION.md  ALPACA_ARCHITECTURE_REDESIGN_PLAN.md  ALPACA_COMPLIANCE_REPORT.md  ARCH_COMPARISON_DIAGRAM.md  ARCH_PER_STRATEGY_BOOKS.md  ARCH_PER_STRATEGY_BOOKS_SUMMARY.md  ASSIGNMENT_HANDLING_RUNBOOK.md  BACKTRADER_UK_STRATEGY.md  BETTER_ORDERS_COMPLETE.md  BUG_FIX_AVG_FILL_PRICE_RACE_CONDITION.md  BUG_FIX_CROSSED_MARKET_PRICING.md  BUG_FIX_EMAIL_NOTIFICATION_DATA.md  BUG_FIX_EVENTBRIDGE_DECIMAL_SERIALIZATION.md  BUG_FIX_EVENTBRIDGE_ENVELOPE_HANDLING.md  BUG_FIX_EVENTBRIDGE_ORCHESTRATOR_BLOCKING.md  BUG_FIX_TRADE_RESULT_FACTORY_FIELD_MISMATCH.md  BUG_FIX_TRADE_RESULT_VALIDATION.md  CALMAR_WEIGHTS.md  CDK_ARCHITECTURE.md  CI_CD_AUDIT_REPORT.md  CI_CD_SECURITY_DECISIONS.md  CI_NON_BLOCKING_TESTS.md  CODE_REVIEW.md  DEBUGGING_QUICK_START.md  DEBUGGING_STACK.md  DELIVERABLES_SUMMARY.md  DEPENDENCY_INJECTION_IMPLEMENTATION_PLAN.md  DEPLOYMENT_COMPLETION_SUMMARY.md  DEPLOYMENT_ENVIRONMENTS.md  DEPRECATION_TimeInForce.md  DI_CRITICAL_ISSUES.md  DI_IMPLEMENTATION_ANALYSIS.md  DSL_PARALLELIZATION.md  DTO_INTEGRATION_GUIDE.md  DTO_MIGRATION_INVENTORY.md  DTO_MIGRATION_PLAN.md  DTO_MIGRATION_SUMMARY.md  DTO_USAGE_ANALYSIS.md  DYNAMIC_CONTRACT_SELECTION.md  (+176 more)
documentation/: BATCH_16_MIGRATION_PLAN.md  BATCH_6_MIGRATION_REPORT.md  BUSINESS_UNITS_REPORT.md  CI_ENFORCEMENT.md  COMPREHENSIVE_DUPLICATE_ANALYSIS.md  DELETION_SAFETY_MATRIX.md  EXECUTION_FLOW_DOCUMENTATION.md  EXECUTION_MODULE_DUPLICATE_ANALYSIS.md  MODULAR_ARCHITECTURE_MIGRATION.md  ROLLBACK.md  SHARED_MODULE_AUDIT_REPORT.md  SHIMS_COMPATIBILITY_AUDIT_REPORT.md  STRATEGY_LEGACY_AUDIT_REPORT.md  STRATEGY_MODULE_REBUILD_PLAN.md  types_any_inventory.md
examples/: UNIFIED_POLICY_LAYER.md  demo_enhanced_orders.py  demo_progressive_strategy.py  policy_layer_usage.py  portfolio_rebalancer_usage.py  progressive_implementation_summary.py  replace_order_usage.py  strategy_market_data_usage.py  trading_example.py  typed_strategy_example.py  typed_strategy_manager_usage.py
execution/: README.md  __init__.py  (+3 more)
issues/: 7.md  (+2 more)
(+8329 files in other folders)
