[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "the-alchemiser"
version = "3.3.13"
description = "Advanced Multi-Strategy Quantitative Trading System with Nuclear and TECL strategies"
readme = "README.md"
authors = [ "Josh Moreton <josh@example.com>",]
license = "MIT"
classifiers = [ "Development Status :: 4 - Beta", "Intended Audience :: Financial and Insurance Industry", "License :: OSI Approved :: MIT License", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.12",]
[[tool.poetry.packages]]
include = "the_alchemiser"

[[tool.poetry.include]]
path = "the_alchemiser/config/*.json"
format = "sdist"

[[tool.poetry.include]]
path = "the_alchemiser/config/*.json"
format = "wheel"

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [ ".git", ".mypy_cache", ".ruff_cache", ".venv", "__pycache__", "build", "dist", "tests", "scripts",]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = [ "pydantic.mypy",]
files = [ "the_alchemiser",]
show_error_codes = true
pretty = true
color_output = true
cache_dir = ".mypy_cache"
exclude = [ "scripts/", "tests/",]
[[tool.mypy.overrides]]
module = [ "alpaca.*", "boto3.*", "botocore.*", "pandas.*", "numpy.*", "tqdm.*", "yaml.*",]
ignore_missing_imports = true

[tool.importlinter]
root_package = "the_alchemiser"
include_external_packages = false
unmatched_ignore_imports_alerting = "warn"

[[tool.importlinter.contracts]]
name = "Shared module isolation - prevent upward dependencies"
type = "forbidden"
source_modules = [ "the_alchemiser.shared",]
forbidden_modules = [ "the_alchemiser.strategy_v2", "the_alchemiser.portfolio_v2", "the_alchemiser.execution_v2", "the_alchemiser.orchestration",]

[[tool.importlinter.contracts]]
name = "Strategy module isolation"
type = "forbidden"
source_modules = [ "the_alchemiser.strategy_v2",]
forbidden_modules = [ "the_alchemiser.portfolio_v2", "the_alchemiser.execution_v2", "the_alchemiser.orchestration",]

[[tool.importlinter.contracts]]
name = "Portfolio module isolation"
type = "forbidden"
source_modules = [ "the_alchemiser.portfolio_v2",]
forbidden_modules = [ "the_alchemiser.strategy_v2", "the_alchemiser.execution_v2", "the_alchemiser.orchestration",]

[[tool.importlinter.contracts]]
name = "Execution module isolation"
type = "forbidden"
source_modules = [ "the_alchemiser.execution_v2",]
forbidden_modules = [ "the_alchemiser.strategy_v2", "the_alchemiser.portfolio_v2", "the_alchemiser.orchestration",]

[[tool.importlinter.contracts]]
name = "Event-driven layered architecture enforcement"
type = "layers"
layers = [ "the_alchemiser.orchestration", "the_alchemiser.strategy_v2 | the_alchemiser.portfolio_v2 | the_alchemiser.execution_v2", "the_alchemiser.shared",]

[[tool.importlinter.contracts]]
name = "Deprecated DTO module forbidden"
type = "forbidden"
source_modules = [ "the_alchemiser",]
forbidden_modules = [ "the_alchemiser.shared.dto",]

[tool.bandit]
exclude_dirs = [ "tests/", ".venv/", "build/", "dist/",]
skips = [ "B101", "B311", "B601", "B602",]
severity_level = "LOW"
confidence_level = "MEDIUM"

[tool.poetry.dependencies]
python = ">=3.12,<4.0.0"
alpaca-py = "0.43.2"
numpy = "1.26.4"
pandas = "^2.2.0"
python-dateutil = "2.9.0.post0"
tqdm = "4.67.1"
setuptools = "80.9.0"
requests = "2.32.5"
PyYAML = "6.0.3"
pydantic = ">=2.0.0"
pydantic-settings = ">=2.0.0"
cachetools = "^6.2.1"
dependency-injector = "^4.48.2"
python-dotenv = "^1.2.1"
structlog = "^25.5.0"
boto3 = "^1.28.0"
jinja2 = "^3.1.0"
playwright = "^1.40.0"
weasyprint = "63.1"

[tool.poetry.urls]
Homepage = "https://github.com/Josh-moreton/The-Alchemiser"
Repository = "https://github.com/Josh-moreton/The-Alchemiser"
Issues = "https://github.com/Josh-moreton/The-Alchemiser/issues"

[tool.ruff.lint]
select = [ "E", "W", "F", "I", "UP", "B", "C4", "SIM", "PTH", "DTZ", "Q", "PIE", "RET", "FBT", "ANN", "D", "S", "RUF", "C901",]
ignore = [ "E501", "B008", "B904", "D203", "D213",]
fixable = [ "ALL",]
unfixable = []

[tool.pytest.ini_options]
addopts = "-n auto --dist=loadscope -q --durations=10"
testpaths = [ "tests",]
markers = [ "serial: cannot be run in parallel (uses shared state, real network/broker, or depends on order)",]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.isort]
known-first-party = [ "the_alchemiser",]

[tool.poetry.group.dev.dependencies]
pyarrow = "^22.0.0"
ruff = ">=0.1.0"
mypy = ">=1.0.0"
pre-commit = "^4.3.0"
types-PyYAML = ">=6.0.0"
types-requests = ">=2.31.0"
types-pytz = ">=2023.3.0"
types-jinja2 = ">=2.11.0"
bandit = ">=1.7.0"
vulture = "^2.14"
psutil = "^7.1.3"
pydocstyle = ">=6.0.0"
pytest = "^8.4.2"
pytest-cov = "^7.0.0"
pip-audit = "^2.7.3"
detect-secrets = "^1.5.0"
pyright = "^1.1.407"
import-linter = "^2.6"
pytest-asyncio = "^1.2.0"
hypothesis = "^6.147.0"
pytest-xdist = "^3.8.0"
pytest-randomly = "^4.0.1"
pytest-timeout = "^2.4.0"
