[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "the-alchemiser"
version = "8.4.4"
description = "Advanced Multi-Strategy Quantitative Trading System with Nuclear and TECL strategies"
readme = "README.md"
authors = [ "Josh Moreton <josh@example.com>",]
license = "MIT"
classifiers = [ "Development Status :: 4 - Beta", "Intended Audience :: Financial and Insurance Industry", "License :: OSI Approved :: MIT License", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.12",]
[[tool.poetry.packages]]
include = "the_alchemiser"

[[tool.poetry.include]]
path = "the_alchemiser/config/*.json"
format = "sdist"

[[tool.poetry.include]]
path = "the_alchemiser/config/*.json"
format = "wheel"

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [ ".git", ".mypy_cache", ".ruff_cache", ".venv", "__pycache__", "build", "dist", "tests", "scripts",]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = [ "pydantic.mypy",]
files = [ "the_alchemiser",]
show_error_codes = true
pretty = true
color_output = true
cache_dir = ".mypy_cache"
exclude = [ "scripts/", "tests/",]
[[tool.mypy.overrides]]
module = [ "alpaca.*", "boto3.*", "botocore.*", "pandas.*", "numpy.*", "tqdm.*", "yaml.*", "structlog.*" ]
ignore_missing_imports = true

[tool.importlinter]
root_package = "the_alchemiser"
include_external_packages = false
unmatched_ignore_imports_alerting = "warn"

# =============================================================================
# ARCHITECTURE: Microservices with Shared Foundation
# =============================================================================
# AWS Lambda deployment enforces runtime isolation. These rules catch mistakes
# early and prevent package bloat from accidental cross-imports.
#
# Business Lambdas: coordinator_v2, strategy_v2, aggregator_v2, portfolio_v2,
#                   execution_v2, notifications_v2, metrics_v2
# Foundation: shared, data_v2
# =============================================================================

[[tool.importlinter.contracts]]
name = "Foundation cannot import business modules"
type = "forbidden"
source_modules = ["the_alchemiser.shared", "the_alchemiser.data_v2"]
forbidden_modules = [
    "the_alchemiser.coordinator_v2",
    "the_alchemiser.strategy_v2",
    "the_alchemiser.aggregator_v2",
    "the_alchemiser.portfolio_v2",
    "the_alchemiser.execution_v2",
    "the_alchemiser.notifications_v2",
    "the_alchemiser.metrics_v2",
]

[[tool.importlinter.contracts]]
name = "Business modules are independent"
type = "independence"
modules = [
    "the_alchemiser.coordinator_v2",
    "the_alchemiser.strategy_v2",
    "the_alchemiser.aggregator_v2",
    "the_alchemiser.portfolio_v2",
    "the_alchemiser.execution_v2",
    "the_alchemiser.notifications_v2",
    "the_alchemiser.metrics_v2",
]

[tool.bandit]
exclude_dirs = [ "tests/", ".venv/", "build/", "dist/",]
skips = [ "B101", "B311", "B601", "B602",]
severity_level = "LOW"
confidence_level = "MEDIUM"

[tool.poetry.dependencies]
python = ">=3.12,<4.0.0"
alpaca-py = "0.43.2"
numpy = "1.26.4"
pandas = "^2.2.0"
python-dateutil = "2.9.0.post0"
requests = "2.32.5"
PyYAML = "6.0.3"
pydantic = ">=2.0.0"
pydantic-settings = ">=2.0.0"
cachetools = "^6.2.2"
dependency-injector = "^4.48.3"
structlog = "^25.5.0"
httpx = "^0.28.1"
quantstats = "^0.0.64"

[tool.poetry.urls]
Homepage = "https://github.com/Josh-moreton/The-Alchemiser"
Repository = "https://github.com/Josh-moreton/The-Alchemiser"
Issues = "https://github.com/Josh-moreton/The-Alchemiser/issues"

[tool.ruff.lint]
select = [ "E", "W", "F", "I", "UP", "B", "C4", "SIM", "PTH", "DTZ", "Q", "PIE", "RET", "FBT", "ANN", "D", "S", "RUF", "C901",]
ignore = [ "E501", "B008", "B904", "D203", "D213",]
fixable = [ "ALL",]
unfixable = []

[tool.pytest.ini_options]
addopts = "-n auto --dist=loadscope -q --durations=10"
testpaths = [ "tests",]
markers = [ "serial: cannot be run in parallel (uses shared state, real network/broker, or depends on order)",]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.isort]
known-first-party = [ "the_alchemiser",]

[tool.poetry.group.dev.dependencies]
pyarrow = "^22.0.0"
ruff = ">=0.1.0"
mypy = ">=1.0.0"
pre-commit = "^4.5.0"
types-PyYAML = ">=6.0.0"
types-requests = ">=2.31.0"
types-pytz = ">=2023.3.0"
bandit = ">=1.7.0"
vulture = "^2.14"
psutil = "^7.1.3"
pydocstyle = ">=6.0.0"
pytest = "^8.4.2"
pytest-cov = "^7.0.0"
pip-audit = "^2.10.0"
detect-secrets = "^1.5.0"
pyright = "^1.1.407"
import-linter = "^2.8"
pytest-asyncio = "^1.3.0"
hypothesis = "^6.148.7"
pytest-xdist = "^3.8.0"
pytest-randomly = "^4.0.1"
pytest-timeout = "^2.4.0"
mypy-boto3-sns = "^1.41.0"
mypy-boto3-s3 = "^1.42.3"
mypy-boto3-events = "^1.41.0"
boto3-stubs = {extras = ["events", "lambda", "s3", "sns"], version = "^1.42.7"}
boto3 = "^1.42.9"
ipython = "^9.8.0"
