[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "the-alchemiser"
version = "9.7.0"
package-mode = false  # Dependency management only - no package installation

# This is an AWS Lambda microservices project deployed via SAM.
# Poetry is used only for:
#   1. Managing dependencies (poetry.lock)
#   2. Dev tools (pytest, mypy, ruff)
# Lambda functions are NOT installed as a Python package.

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [ ".git", ".mypy_cache", ".ruff_cache", ".venv", "__pycache__", "build", "dist", "tests", "scripts",]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = [ "pydantic.mypy",]
files = [ "functions/", "layers/shared/",]
explicit_package_bases = true
show_error_codes = true
pretty = true
color_output = true
cache_dir = ".mypy_cache"
exclude = [ "scripts/", "tests/", ".aws-sam/", "__main__\\.py$", "functions/[^/]+/__init__\\.py$",]

# External libraries without type stubs
[[tool.mypy.overrides]]
module = [ "alpaca.*", "boto3.*", "botocore.*", "pandas.*", "numpy.*", "pyarrow.*", "tqdm.*", "yaml.*", "structlog.*", "dateutil.*", "quantstats.*", "awswrangler.*", "mypy_boto3_ses.*" ]
ignore_missing_imports = true

[tool.importlinter]
root_package = "the_alchemiser"
include_external_packages = false
unmatched_ignore_imports_alerting = "warn"

# =============================================================================
# ARCHITECTURE: AWS Lambda Microservices with Shared Layer
# =============================================================================
# Each Lambda function in functions/ is self-contained and deployed independently.
# Shared code in layers/shared/the_alchemiser/shared/ must not import from
# function-specific code.
#
# Lambda Functions: functions/*
# Shared Layer: layers/shared/the_alchemiser/shared/
# =============================================================================

# Note: Import linter currently disabled as it's designed for monolithic packages.
# Lambda isolation is enforced at deployment time by SAM - each function only
# packages its own code + shared layer. Cross-function imports are impossible
# at runtime.

[tool.bandit]
exclude_dirs = [ "tests/", ".venv/", "build/", "dist/",]
skips = [ "B101", "B311", "B601", "B602",]
severity_level = "LOW"
confidence_level = "MEDIUM"

[tool.poetry.dependencies]
python = ">=3.12,<4.0.0"
alpaca-py = "0.43.2"
numpy = "1.26.4"
pandas = "^2.2.0"
python-dateutil = "2.9.0.post0"
requests = "2.32.5"
PyYAML = "6.0.3"
pydantic = ">=2.0.0"
pydantic-settings = ">=2.0.0"
cachetools = "^6.2.4"
dependency-injector = "^4.48.3"
structlog = "^25.5.0"
httpx = "^0.28.1"
quantstats = "^0.0.77"

[tool.poetry.urls]
Homepage = "https://github.com/Josh-moreton/The-Alchemiser"
Repository = "https://github.com/Josh-moreton/The-Alchemiser"
Issues = "https://github.com/Josh-moreton/The-Alchemiser/issues"

[tool.ruff.lint]
select = [ "E", "W", "F", "I", "UP", "B", "C4", "SIM", "PTH", "DTZ", "Q", "PIE", "RET", "FBT", "ANN", "D", "S", "RUF", "C901",]
ignore = [ "E501", "B008", "B904", "D203", "D213",]
fixable = [ "ALL",]
unfixable = []

[tool.ruff.lint.per-file-ignores]
# Scripts: Allow late imports (load_dotenv), boolean args, ternary preferences, Path.open()
"scripts/*" = ["E402", "FBT001", "FBT002", "SIM108", "PTH123"]

[tool.pytest.ini_options]
addopts = "-n auto --dist=loadscope -q --durations=10"
testpaths = [ "tests",]
markers = [ "serial: cannot be run in parallel (uses shared state, real network/broker, or depends on order)",]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.isort]
known-first-party = [ "the_alchemiser",]

[tool.poetry.group.dev.dependencies]
pyarrow = "^22.0.0"
ruff = ">=0.1.0"
mypy = ">=1.0.0"
pre-commit = "^4.5.1"
types-PyYAML = ">=6.0.0"
types-requests = ">=2.31.0"
types-pytz = ">=2023.3.0"
bandit = ">=1.7.0"
vulture = "^2.14"
psutil = "^7.2.1"
pydocstyle = ">=6.0.0"
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
pip-audit = "^2.10.0"
detect-secrets = "^1.5.0"
pyright = "^1.1.408"
import-linter = "^2.9"
pytest-asyncio = "^1.3.0"
hypothesis = "^6.150.1"
pytest-xdist = "^3.8.0"
pytest-randomly = "^4.0.1"
pytest-timeout = "^2.4.0"
mypy-boto3-sns = "^1.41.0"
mypy-boto3-s3 = "^1.42.21"
mypy-boto3-events = "^1.41.0"
boto3-stubs = {extras = ["events", "lambda", "s3", "sns"], version = "^1.42.25"}
boto3 = "^1.42.25"
ipython = "^9.9.0"
mypy-boto3-dynamodb = "^1.42.3"
yfinance = "^1.0.0"
